# docs/swagger.json
@@ -34,14 +34,14 @@
                     },
                     {
                         "type": "string",
-                        "description": "passWord",
-                        "name": "passWord",
+                        "description": "password",
+                        "name": "password",
                         "in": "query"
                     },
                     {
                         "type": "string",
-                        "description": "repassWord",
-                        "name": "repassWord",
+                        "description": "repassword",
+                        "name": "repassword",
                         "in": "query"
                     }
                 ],
@@ -94,8 +94,8 @@
                     },
                     {
                         "type": "string",
-                        "description": "passWord",
-                        "name": "passWord",
+                        "description": "password",
+                        "name": "password",
                         "in": "query"
                     }
                 ],
